# creative_coding_mischief

./: .gitignore  3d_printer_setup.md  README.md  cool_projects.md  non_session.md
homegrown-session09/: README.md
projection_app/: IO.pde  Interaction.pde  Interface.pde  OutputWindow.pde  README.md  Surface.pde  projection_app.pde
projection_app/data/: config.json
session01/: README.md
session02/: README.md
session03/: README.md
session04/: README.md
session05/: README.md  non_session.md
session06/: README.md
session06/afterhours_circles/: afterhours_circles.pde
session06/arduino/etch_a_sketch/: etch_a_sketch.ino
session06/arduino/etch_a_sketch_clear/: etch_a_sketch_clear.ino
session06/arduino/growing_circle/: growing_circle.ino
session06/collaborative-dots/: server.py
session06/collaborative-dots/templates/: index.html
session06/p5js/: etch_a_sketch.html  etch_a_sketch_clear.html  growing_circle.html
session07/: README.md
session07/hydra/: hydra_serial.html
session08/: README.md  distance_finder.md
session09/: projection_mapping.md  projection_mapping_processing.md  projection_mapping_touchdesigner.md  readme.md
session09/arduino_pot_serial/: arduino_pot_serial.ino
session10/: README.md
session11/: README.md
session12/: README.md
session13/: README.md
spell/: .gitignore
spell/aural-glossary/: README.md
spell/aural-glossary/brain/: CMakeLists.txt  brain.cpp  brain.py  brain_core.h  test_brain.cpp
spell/aural-glossary/web_ui/: app.js  (+2 more)
touch_designer/: README.md  basic-mapper.toe  build_network.py  syphon-out.toe
(+6 files in other folders)
